my_parser/path/PathParser.py
# Generated from Path.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PathParser ( Parser ):

    grammarFileName = "Path.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'%2f'", "'/'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'*'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'~'" ]

    symbolicNames = [ "<INVALID>", "LET_DIG_S_LET", "LET_DIG", "SLASH_HEX", 
                      "SLASH", "WS", "CAMMA", "DIGIT", "LETTER", "QUOTE", 
                      "DQUOTE", "HYPHEN", "US", "EQ", "DOT", "B_SLASH", 
                      "QM", "PERCENT", "CH_AND", "COLON", "SEMI_COLON", 
                      "STAR", "PAR_O", "PAR_C", "BRACK", "ACOLAD", "DOLLAR", 
                      "ADSGN", "EXCAM_SGN", "BIN_INVERT", "IRG_SGN1", "CH_OR", 
                      "LT_SGN", "GT_SGN", "HASHTAG" ]

    RULE_path = 0
    RULE_p_value = 1
    RULE_value = 2
    RULE_ilg = 3
    RULE_label = 4
    RULE_delim = 5
    RULE_ch_ilg = 6
    RULE_ldse = 7
    RULE_opNot = 8
    RULE_opBinInvert = 9
    RULE_opEqual = 10
    RULE_opLt = 11
    RULE_opGt = 12
    RULE_opMinus = 13
    RULE_opSem = 14
    RULE_cmt = 15
    RULE_ddash = 16
    RULE_quote = 17
    RULE_dquote = 18
    RULE_us_sgn = 19
    RULE_c_and = 20
    RULE_c_or = 21
    RULE_c_slash = 22
    RULE_c_slash_hex = 23
    RULE_c_dot = 24
    RULE_c_colon = 25
    RULE_s_bslash = 26
    RULE_c_q = 27
    RULE_par_open = 28
    RULE_par_close = 29
    RULE_c_star = 30
    RULE_c_percent = 31
    RULE_c_brack = 32
    RULE_c_acolad = 33
    RULE_c_dollar = 34
    RULE_c_adsgn = 35
    RULE_c_irg1 = 36

    ruleNames =  [ "path", "p_value", "value", "ilg", "label", "delim", 
                   "ch_ilg", "ldse", "opNot", "opBinInvert", "opEqual", 
                   "opLt", "opGt", "opMinus", "opSem", "cmt", "ddash", "quote", 
                   "dquote", "us_sgn", "c_and", "c_or", "c_slash", "c_slash_hex", 
                   "c_dot", "c_colon", "s_bslash", "c_q", "par_open", "par_close", 
                   "c_star", "c_percent", "c_brack", "c_acolad", "c_dollar", 
                   "c_adsgn", "c_irg1" ]

    EOF = Token.EOF
    LET_DIG_S_LET=1
    LET_DIG=2
    SLASH_HEX=3
    SLASH=4
    WS=5
    CAMMA=6
    DIGIT=7
    LETTER=8
    QUOTE=9
    DQUOTE=10
    HYPHEN=11
    US=12
    EQ=13
    DOT=14
    B_SLASH=15
    QM=16
    PERCENT=17
    CH_AND=18
    COLON=19
    SEMI_COLON=20
    STAR=21
    PAR_O=22
    PAR_C=23
    BRACK=24
    ACOLAD=25
    DOLLAR=26
    ADSGN=27
    EXCAM_SGN=28
    BIN_INVERT=29
    IRG_SGN1=30
    CH_OR=31
    LT_SGN=32
    GT_SGN=33
    HASHTAG=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def p_value(self):
            return self.getTypedRuleContext(PathParser.P_valueContext,0)


        def path(self):
            return self.getTypedRuleContext(PathParser.PathContext,0)


        def c_slash(self):
            return self.getTypedRuleContext(PathParser.C_slashContext,0)


        def getRuleIndex(self):
            return PathParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPath" ):
                return visitor.visitPath(self)
            else:
                return visitor.visitChildren(self)



    def path(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PathParser.PathContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_path, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.p_value(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 81
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        localctx = PathParser.PathContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_path)
                        self.state = 77
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 78
                        self.p_value(0)
                        pass

                    elif la_ == 2:
                        localctx = PathParser.PathContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_path)
                        self.state = 79
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 80
                        self.c_slash()
                        pass

             
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class P_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(PathParser.ValueContext,0)


        def p_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.P_valueContext)
            else:
                return self.getTypedRuleContext(PathParser.P_valueContext,i)


        def delim(self):
            return self.getTypedRuleContext(PathParser.DelimContext,0)


        def getRuleIndex(self):
            return PathParser.RULE_p_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_value" ):
                listener.enterP_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_value" ):
                listener.exitP_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_value" ):
                return visitor.visitP_value(self)
            else:
                return visitor.visitChildren(self)



    def p_value(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PathParser.P_valueContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_p_value, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.value(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 95
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PathParser.P_valueContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_p_value)
                    self.state = 89
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 90
                    self.delim(0)
                    self.state = 91
                    self.p_value(3) 
                self.state = 97
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(PathParser.LabelContext,0)


        def ilg(self):
            return self.getTypedRuleContext(PathParser.IlgContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.ValueContext)
            else:
                return self.getTypedRuleContext(PathParser.ValueContext,i)


        def getRuleIndex(self):
            return PathParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)



    def value(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PathParser.ValueContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_value, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PathParser.LET_DIG_S_LET, PathParser.LET_DIG]:
                self.state = 99
                self.label()
                pass
            elif token in [PathParser.SLASH_HEX, PathParser.WS, PathParser.CAMMA, PathParser.QUOTE, PathParser.DQUOTE, PathParser.HYPHEN, PathParser.US, PathParser.EQ, PathParser.DOT, PathParser.B_SLASH, PathParser.QM, PathParser.PERCENT, PathParser.CH_AND, PathParser.COLON, PathParser.SEMI_COLON, PathParser.STAR, PathParser.PAR_O, PathParser.PAR_C, PathParser.BRACK, PathParser.ACOLAD, PathParser.DOLLAR, PathParser.ADSGN, PathParser.EXCAM_SGN, PathParser.BIN_INVERT, PathParser.IRG_SGN1, PathParser.CH_OR, PathParser.LT_SGN, PathParser.GT_SGN]:
                self.state = 100
                self.ilg()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PathParser.ValueContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_value)
                    self.state = 103
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 104
                    self.value(4) 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class IlgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opMinus(self):
            return self.getTypedRuleContext(PathParser.OpMinusContext,0)


        def us_sgn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.Us_sgnContext)
            else:
                return self.getTypedRuleContext(PathParser.Us_sgnContext,i)


        def c_colon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_colonContext)
            else:
                return self.getTypedRuleContext(PathParser.C_colonContext,i)


        def c_slash_hex(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_slash_hexContext)
            else:
                return self.getTypedRuleContext(PathParser.C_slash_hexContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(PathParser.WS)
            else:
                return self.getToken(PathParser.WS, i)

        def CAMMA(self):
            return self.getToken(PathParser.CAMMA, 0)

        def c_percent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_percentContext)
            else:
                return self.getTypedRuleContext(PathParser.C_percentContext,i)


        def s_bslash(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.S_bslashContext)
            else:
                return self.getTypedRuleContext(PathParser.S_bslashContext,i)


        def opSem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.OpSemContext)
            else:
                return self.getTypedRuleContext(PathParser.OpSemContext,i)


        def c_q(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_qContext)
            else:
                return self.getTypedRuleContext(PathParser.C_qContext,i)


        def opEqual(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.OpEqualContext)
            else:
                return self.getTypedRuleContext(PathParser.OpEqualContext,i)


        def ch_ilg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.Ch_ilgContext)
            else:
                return self.getTypedRuleContext(PathParser.Ch_ilgContext,i)


        def c_dot(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_dotContext)
            else:
                return self.getTypedRuleContext(PathParser.C_dotContext,i)


        def getRuleIndex(self):
            return PathParser.RULE_ilg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIlg" ):
                listener.enterIlg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIlg" ):
                listener.exitIlg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIlg" ):
                return visitor.visitIlg(self)
            else:
                return visitor.visitChildren(self)




    def ilg(self):

        localctx = PathParser.IlgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ilg)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PathParser.HYPHEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.opMinus()
                pass
            elif token in [PathParser.US]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 111
                        self.us_sgn()

                    else:
                        raise NoViableAltException(self)
                    self.state = 114 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass
            elif token in [PathParser.COLON]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 116
                        self.c_colon()

                    else:
                        raise NoViableAltException(self)
                    self.state = 119 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass
            elif token in [PathParser.SLASH_HEX]:
                self.enterOuterAlt(localctx, 4)
                self.state = 122 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 121
                        self.c_slash_hex()

                    else:
                        raise NoViableAltException(self)
                    self.state = 124 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass
            elif token in [PathParser.WS]:
                self.enterOuterAlt(localctx, 5)
                self.state = 127 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 126
                        self.match(PathParser.WS)

                    else:
                        raise NoViableAltException(self)
                    self.state = 129 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass
            elif token in [PathParser.CAMMA]:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.match(PathParser.CAMMA)
                pass
            elif token in [PathParser.PERCENT]:
                self.enterOuterAlt(localctx, 7)
                self.state = 133 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 132
                        self.c_percent()

                    else:
                        raise NoViableAltException(self)
                    self.state = 135 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass
            elif token in [PathParser.B_SLASH]:
                self.enterOuterAlt(localctx, 8)
                self.state = 138 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 137
                        self.s_bslash()

                    else:
                        raise NoViableAltException(self)
                    self.state = 140 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass
            elif token in [PathParser.SEMI_COLON]:
                self.enterOuterAlt(localctx, 9)
                self.state = 143 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 142
                        self.opSem()

                    else:
                        raise NoViableAltException(self)
                    self.state = 145 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass
            elif token in [PathParser.QM]:
                self.enterOuterAlt(localctx, 10)
                self.state = 148 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 147
                        self.c_q()

                    else:
                        raise NoViableAltException(self)
                    self.state = 150 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass
            elif token in [PathParser.EQ]:
                self.enterOuterAlt(localctx, 11)
                self.state = 153 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 152
                        self.opEqual()

                    else:
                        raise NoViableAltException(self)
                    self.state = 155 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                pass
            elif token in [PathParser.QUOTE, PathParser.DQUOTE, PathParser.CH_AND, PathParser.STAR, PathParser.PAR_O, PathParser.PAR_C, PathParser.BRACK, PathParser.ACOLAD, PathParser.DOLLAR, PathParser.ADSGN, PathParser.EXCAM_SGN, PathParser.BIN_INVERT, PathParser.IRG_SGN1, PathParser.CH_OR, PathParser.LT_SGN, PathParser.GT_SGN]:
                self.enterOuterAlt(localctx, 12)
                self.state = 158 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 157
                        self.ch_ilg()

                    else:
                        raise NoViableAltException(self)
                    self.state = 160 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                pass
            elif token in [PathParser.DOT]:
                self.enterOuterAlt(localctx, 13)
                self.state = 163 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 162
                        self.c_dot()

                    else:
                        raise NoViableAltException(self)
                    self.state = 165 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET_DIG_S_LET(self):
            return self.getToken(PathParser.LET_DIG_S_LET, 0)

        def LET_DIG(self):
            return self.getToken(PathParser.LET_DIG, 0)

        def getRuleIndex(self):
            return PathParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = PathParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            _la = self._input.LA(1)
            if not(_la==PathParser.LET_DIG_S_LET or _la==PathParser.LET_DIG):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DelimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self):
            return self.getToken(PathParser.WS, 0)

        def CAMMA(self):
            return self.getToken(PathParser.CAMMA, 0)

        def delim(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.DelimContext)
            else:
                return self.getTypedRuleContext(PathParser.DelimContext,i)


        def getRuleIndex(self):
            return PathParser.RULE_delim

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelim" ):
                listener.enterDelim(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelim" ):
                listener.exitDelim(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelim" ):
                return visitor.visitDelim(self)
            else:
                return visitor.visitChildren(self)



    def delim(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PathParser.DelimContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_delim, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PathParser.WS]:
                self.state = 172
                self.match(PathParser.WS)
                pass
            elif token in [PathParser.CAMMA]:
                self.state = 173
                self.match(PathParser.CAMMA)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 180
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PathParser.DelimContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_delim)
                    self.state = 176
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 177
                    self.delim(4) 
                self.state = 182
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Ch_ilgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def c_star(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_starContext)
            else:
                return self.getTypedRuleContext(PathParser.C_starContext,i)


        def par_close(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.Par_closeContext)
            else:
                return self.getTypedRuleContext(PathParser.Par_closeContext,i)


        def par_open(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.Par_openContext)
            else:
                return self.getTypedRuleContext(PathParser.Par_openContext,i)


        def c_brack(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_brackContext)
            else:
                return self.getTypedRuleContext(PathParser.C_brackContext,i)


        def c_acolad(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_acoladContext)
            else:
                return self.getTypedRuleContext(PathParser.C_acoladContext,i)


        def c_dollar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_dollarContext)
            else:
                return self.getTypedRuleContext(PathParser.C_dollarContext,i)


        def c_adsgn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_adsgnContext)
            else:
                return self.getTypedRuleContext(PathParser.C_adsgnContext,i)


        def opNot(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.OpNotContext)
            else:
                return self.getTypedRuleContext(PathParser.OpNotContext,i)


        def c_or(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_orContext)
            else:
                return self.getTypedRuleContext(PathParser.C_orContext,i)


        def c_and(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_andContext)
            else:
                return self.getTypedRuleContext(PathParser.C_andContext,i)


        def opBinInvert(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.OpBinInvertContext)
            else:
                return self.getTypedRuleContext(PathParser.OpBinInvertContext,i)


        def c_irg1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.C_irg1Context)
            else:
                return self.getTypedRuleContext(PathParser.C_irg1Context,i)


        def opLt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.OpLtContext)
            else:
                return self.getTypedRuleContext(PathParser.OpLtContext,i)


        def opGt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.OpGtContext)
            else:
                return self.getTypedRuleContext(PathParser.OpGtContext,i)


        def quote(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.QuoteContext)
            else:
                return self.getTypedRuleContext(PathParser.QuoteContext,i)


        def dquote(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PathParser.DquoteContext)
            else:
                return self.getTypedRuleContext(PathParser.DquoteContext,i)


        def getRuleIndex(self):
            return PathParser.RULE_ch_ilg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCh_ilg" ):
                listener.enterCh_ilg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCh_ilg" ):
                listener.exitCh_ilg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCh_ilg" ):
                return visitor.visitCh_ilg(self)
            else:
                return visitor.visitChildren(self)




    def ch_ilg(self):
